--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 <div class="page-wrapper">
     <h1>Upload MRI Brain Image</h1>
 
-    <form action="{{ url_for('predict_page') }}" method="POST" enctype="multipart/form-data">
+    <form action="{{ url_for('predict') }}" method="POST" enctype="multipart/form-data">
         <input type="file" name="file" accept="image/*" required>
         <br><br>
         <button type="submit">Predict</button>
