Update navigation links to point to 'index' page

--- a/templates/home.html
+++ b/templates/home.html
@@ -174,7 +174,7 @@
 <nav class="navbar">
     <div>Remember Me Do</div>
     <a href="{{ url_for('home') }}">Home</a>
-    <a href="{{ url_for('predict_page') }}">Predict</a>
+    <a href="{{ url_for('index') }}">Predict</a>
     <a href="{{ url_for('dashboard') }}">Patient Info</a>
 </nav>
 
@@ -196,7 +196,7 @@
             <h2>Seluruh privasi data akan kami jaga, Silahkan upload foto scan MRI untuk mendapatkan hasil</h2>
             
             <div class="button-group">
-                <a href="{{ url_for('predict_page') }}">Dapatkan hasil →</a>
+                <a href="{{ url_for('index') }}">Dapatkan hasil →</a>
             </div>
         </div>
     </div>
