--- a/templates/index.html
+++ b/templates/index.html
@@ -149,14 +149,14 @@
 <nav class="navbar">
     <div>Remember Me Do</div>
     <a href="{{ url_for('home') }}">Home</a>
-    <a href="{{ url_for('predict_page') }}">Predict</a>
+    <a href="{{ url_for('index) }}">Predict</a>
     <a href="{{ url_for('dashboard') }}">Patient Info</a>
 </nav>
 
 <div class="page-wrapper">
     <h1>Upload MRI Brain Image</h1>
     <p class="page-description">Silakan upload gambar scan MRI otak untuk analisis tingkat demensia</p>
-    <form action="{{ url_for('predict') }}" method="POST" enctype="multipart/form-data">
+    <form action="{{ url_for('result') }}" method="POST" enctype="multipart/form-data">
         <input type="file" name="file" accept="image/*" required>
         <br><br>
         <button type="submit">Predict</button>
